# project

./: AssignCommand.cpp  AssignCommand.h  BinaryExpression.cpp  BinaryExpression.h  CMakeLists.txt  CalculateExpression.cpp  CalculateExpression.h  Client.cpp  Client.h  Command.h  CommandExpression.cpp  CommandExpression.h  ConditionParser.cpp  ConditionParser.h  ConnectCommand.cpp  ConnectCommand.h  Data.cpp  Data.h  DefineVarCommand.cpp  DefineVarCommand.h  Div.cpp  Div.h  Expression.h  IfCondition.cpp  IfCondition.h  Lexer.cpp  Lexer.h  LoopCondition.cpp  LoopCondition.h  MakeItDouble.cpp  MakeItDouble.h  Minus.cpp  Minus.h  Mul.cpp  Mul.h  MyParser.cpp  MyParser.h  Neg.cpp  Neg.h  Number.cpp  (+20 more)
